# rastera

./: README.md  pyproject.toml
benchmarks/: _worker.py  benchmark.py  run.py  runner.py
examples/: index_bench.py  index_demo.py
notebooks/: test.ipynb
rastera/: __init__.py  config.py  geo.py  index.py  merge.py  meta.py  reader.py  store.py  vrt.py
rastera/formats/: dimap.py
tests/: conftest.py  test_config.py  test_geo.py  test_index.py  test_live.py  test_merge.py  test_meta.py  test_meta_ifd.py  test_rastera.py  test_store.py  test_vrt.py
tests/formats/: test_dimap.py
