[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rastera"
version = "0.1.0"
description = "Async raster reader with bounds/window/merge read functionality, based on async-tiff"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "affine>=2.4.0",
    "async-tiff>=0.7.1",
    "numpy>=2.2.6",
    "pyproj>=3.7.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not live'"
markers = [
    "live: tests that hit real remote services (deselected by default)",
]

[tool.setuptools]
packages = ["rastera"]
